tests/ui/overflow.stderr
error: literal out of range for `u8`
  --> tests/ui/overflow.rs:20:9
   |
20 |     A = 0xffef,
   |         ^^^^^^
   |
   = note: `#[deny(overflowing_literals)]` on by default
   = note: the literal `0xffef` (decimal `65519`) does not fit into the type `u8` and will become `239u8`
   = help: consider using the type `u16` instead

error: literal out of range for `u8`
  --> tests/ui/overflow.rs:21:5
   |
21 |     B,
   |     ^
   |
   = note: the literal `B` does not fit into the type `u8` whose range is `0..=255`

error: literal out of range for `u8`
  --> tests/ui/overflow.rs:28:5
   |
28 |     B,
   |     ^
   |
   = note: the literal `B` does not fit into the type `u8` whose range is `0..=255`
